tests/http/snapshots/http__legacy_channels__badges_need_twitch.snap
---
source: tests/http/legacy_channels.rs
expression: "get(\"/badges/11111\").send().await"
---
GET /badges/11111
status: 503 Service Unavailable
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Twitch token is not ready yet
