tests/http/snapshots/http__legacy_channels__badges_of_unlogged_channel.snap
---
source: tests/http/legacy_channels.rs
expression: "get(\"/badges/99999\").send().await"
---
GET /badges/99999
status: 404 Not Found
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Not found
