tests/http/snapshots/http__legacy_channels__capabilities.snap
---
source: tests/http/legacy_channels.rs
expression: "get(\"/capabilities\").send().await"
---
GET /capabilities
status: 200 OK
content-type: application/json
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
[
  "arbitrary-range-query",
  "search",
  "stats",
  "namehistory"
]
