tests/http/snapshots/http__legacy_channels__channels_need_twitch.snap
---
source: tests/http/legacy_channels.rs
expression: "get(\"/channels\").send().await"
---
GET /channels
status: 503 Service Unavailable
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Twitch token is not ready yet
