tests/http/snapshots/http__legacy_channels__channels_wrong_method.snap
---
source: tests/http/legacy_channels.rs
expression: "request(Method::PUT, \"/channels\").send().await"
---
PUT /channels
status: 405 Method Not Allowed
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
